# brier-lab

./: .gitignore  ACHIEVEMENT_NOTES.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
docs/: COLLAB.md  EXAMPLES_20260709.md  USAGE.md
src/brier_lab/: __init__.py  __main__.py  cli.py  metrics.py
tests/: test_accuracy_threshold.py  test_ece.py  test_log_loss.py  test_mean_log_loss.py  test_metrics.py  test_metrics_extra.py  test_multi_brier.py  test_sharpness_bss.py  test_version.py
